--- a/my-bti/src/components/button/Button.module.css
+++ b/my-bti/src/components/button/Button.module.css
@@ -1,3 +1,3 @@
 .btn {
-  @apply p-2 md:p-3 border flex justify-center items-center rounded-md bg-green-600 text-white hover:bg-green-800 cursor-pointer;
+  @apply p-2 md:p-3 border border-green-600 flex justify-center items-center rounded-md bg-green-600 text-white hover:bg-green-800 cursor-pointer;
 }/*# sourceMappingURL=Button.module.css.map */
