--- a/my-bti/src/components/loader/Loader.module.css
+++ b/my-bti/src/components/loader/Loader.module.css
@@ -1,20 +1,14 @@
 .containerStyle {
   position: relative;
-  height: 20px;
+  height: 40px;
   display: flex;
-  gap: 25px;
+  gap: 50px;
   align-items: center;
+}
+.containerStyle h2 {
+  @apply text-base font-semibold text-slate-600;
 }
 
 .circleStyle {
-  display: block;
-  width: 20px;
-  height: 20px;
-  border: 3px solid rgb(190, 185, 185);
-  border-top: 3px solid #dde8f0;
-  border-radius: 50%;
-  position: absolute;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
+  @apply border-4 border-green-500 border-solid block w-5 md:w-10 h-5 md:h-10 border-t-4 border-t-slate-400 rounded-full absolute box-border top-0 left-0;
 }/*# sourceMappingURL=Loader.module.css.map */
