--- a/my-bti/src/containers/carouselcontainer/Carouselsection.module.css
+++ b/my-bti/src/containers/carouselcontainer/Carouselsection.module.css
@@ -1,3 +1,8 @@
+.main_container {
+  @apply rounded-3xl bg-slate-700 p-1;
+  width: inherit;
+}
+
 .orange_vector {
   width: 60px;
   height: 60px;
