--- a/my-bti/src/ui/contacts/contacts.module.css
+++ b/my-bti/src/ui/contacts/contacts.module.css
@@ -1,3 +1,15 @@
+.h4_hero {
+  @apply text-center my-5 md:my-10 font-bold text-gray-900;
+}
+
+.container_box {
+  @apply flex flex-col md:flex-row items-center justify-center md:justify-between gap-5 md:gap-0;
+}
+
+.socail_media_box {
+  @apply flex items-center justify-center gap-1 cursor-pointer;
+}
+
 .orange_vector {
   top: 0;
   left: 0;
