--- a/my-bti/src/ui/whywe/Whywe.module.css
+++ b/my-bti/src/ui/whywe/Whywe.module.css
@@ -7,7 +7,7 @@
 }
 
 .h4_bottom {
-  @apply text-center my-5 md:my-10 font-bold text-white text-center bg-slate-600 rounded-md p-2;
+  @apply text-center my-5 md:my-10 font-bold text-white bg-slate-600 rounded-md p-2;
 }
 
 .card {
