--- a/my-bti/src/app/aboutus/aboutUsPage.module.css
+++ b/my-bti/src/app/aboutus/aboutUsPage.module.css
@@ -1,4 +1,4 @@
 .aboutus_section {
-  background: var(--gray-900, #2A3342);
   width: 100%;
+  padding-bottom: 20vh;
 }/*# sourceMappingURL=aboutUsPage.module.css.map */
