--- a/my-bti/src/app/aboutus/aboutUsPage.module.scss
+++ b/my-bti/src/app/aboutus/aboutUsPage.module.scss
@@ -1,4 +1,5 @@
 .aboutus_section{
-    background: var(--gray-900, #2A3342);
+    // background: var(--gray-900, #2A3342);
     width: 100%;
+    padding-bottom: 20vh;
 }
