--- a/my-bti/src/app/globals.css
+++ b/my-bti/src/app/globals.css
@@ -27,7 +27,7 @@ body {
     rgb(var(--background-start-rgb));
 } */
 
-.layout {
+/* .layout {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -43,7 +43,7 @@ body {
 
 .layout h6{
   @apply text-base md:text-xl text-slate-500;
-}
+} */
 
 .main {
   display: flex;
@@ -51,3 +51,5 @@ body {
   overflow: auto;
   flex-direction: column;
 }
+
+
