--- a/my-bti/src/components/calculator/CalculatorTP.module.scss
+++ b/my-bti/src/components/calculator/CalculatorTP.module.scss
@@ -11,7 +11,7 @@
 }
 
 .h1 {
-    @apply text-sm md:text-lg text-slate-800 font-medium mt-2 md:mt-4;
+    @apply text-sm md:text-lg text-white font-medium mt-2 md:mt-4;
 }
 
 .span {
