--- a/my-bti/src/components/footer/Footer.module.scss
+++ b/my-bti/src/components/footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer_section{
-    background: radial-gradient(50% 50% at 50% 50%, rgba(247, 248, 249, 0.00) 0%, #F7F8F9 100%);
+   @apply bg-slate-100;
 }
 
 
