--- a/my-bti/src/components/loader/Loader.module.scss
+++ b/my-bti/src/components/loader/Loader.module.scss
@@ -1,10 +1,10 @@
 .containerStyle{
     @apply relative h-5 md:h-10 flex gap-7 items-center;
     h2{
-        @apply text-sm md:text-base font-semibold text-slate-600;
+        @apply text-sm md:text-base font-semibold text-slate-600 md:ml-2;
     }
 };
 
 .circleStyle{
-    @apply border-4 border-green-500 border-solid block w-5 md:w-10 h-5 md:h-10 border-t-4 border-t-slate-400 rounded-full absolute box-border top-0 left-0;
+    @apply border-4 border-green-500 border-solid block w-5 md:w-8 h-5 md:h-8 border-t-4 border-t-slate-400 rounded-full absolute box-border top-0 left-0;
 }
