added button for change theme to the web site

--- a/my-bti/src/components/header/header.module.scss
+++ b/my-bti/src/components/header/header.module.scss
@@ -3,6 +3,12 @@
     height: 41px;
 }
 
+.theme_logo{
+    width: 24px;
+    height: 24px;
+}
+
+
 @media (min-width: 768px) {
     .logo {
         width: 61px;
