edited styles in contact form, carousel

--- a/my-bti/src/containers/carouselcontainer/Carouselsection.module.scss
+++ b/my-bti/src/containers/carouselcontainer/Carouselsection.module.scss
@@ -1,7 +1,7 @@
-.main_container{
-    @apply rounded-3xl bg-slate-700 p-1;
-    width: inherit;
-}
+// .main_container{
+//     @apply rounded-3xl bg-slate-700 p-1;
+//     width: inherit;
+// }
 
 .orange_vector {
     width: 60px;
