--- a/my-bti/src/components/forms/contactForm/contactForm.module.scss
+++ b/my-bti/src/components/forms/contactForm/contactForm.module.scss
@@ -1,13 +1,24 @@
-.contactform {
+.light_contactform {
     @apply flex flex-col justify-center items-center gap-2 w-full max-w-lg p-5 rounded-lg;
+}
+
+.dark_contactform {
+    @apply flex flex-col justify-center items-center gap-2 w-full max-w-lg p-5 rounded-lg;
+    label{
+        @apply text-slate-100;
+    }
 }
 
 .text_input {
     @apply p-2 md:p-4 w-full md:w-96 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400;
 }
 
-.textarea {
+.light_textarea {
     @apply p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none;
+}
+
+.dark_textarea {
+    @apply bg-slate-800 p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none text-gray-300;
 }
 
 .submit_btn{
