--- a/my-bti/src/components/input/Input.module.scss
+++ b/my-bti/src/components/input/Input.module.scss
@@ -1,4 +1,8 @@
-.text_input {
+.dark_text_input {
+    @apply bg-slate-800 p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 placeholder:bg-slate-800 focus:outline-none focus:border-green-400 cursor-pointer text-gray-300;
+}
+
+.light_text_input {
     @apply p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 cursor-pointer;
 }
 
