--- a/my-bti/src/containers/themecontainer/ThemeContainer.module.css
+++ b/my-bti/src/containers/themecontainer/ThemeContainer.module.css
@@ -20,13 +20,26 @@
   @apply flex flex-col items-center justify-center gap-4 transform transition-transform duration-500 hover:scale-125;
 }
 .dark .card_container .card_content h2 {
-  @apply text-slate-900;
+  @apply text-slate-800 font-semibold;
 }
 .dark .text_content_book h1 {
   @apply text-white;
 }
 .dark .text_content_book ul {
   @apply text-slate-100;
+}
+.dark .main_container {
+  @apply rounded-3xl bg-slate-100 p-1;
+  width: inherit;
+}
+.dark .main_container h3 {
+  @apply text-slate-800 font-semibold;
+}
+.dark .side_contr {
+  @apply container bg-slate-100 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
+}
+.dark .side_contr p {
+  @apply text-slate-800 font-semibold;
 }
 
 .light {
@@ -51,11 +64,21 @@
   @apply flex flex-col items-center justify-center gap-4 transform transition-transform duration-500 hover:scale-125;
 }
 .light .card_container .card_content h2 {
-  @apply text-white;
+  @apply text-white font-semibold;
 }
 .light .text_content_book h1 {
   @apply text-black;
 }
 .light .text_content_book ul {
   @apply text-slate-700;
+}
+.light .main_container {
+  @apply rounded-3xl bg-slate-700 p-1;
+  width: inherit;
+}
+.light .side_contr {
+  @apply container bg-slate-700 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
+}
+.light .side_contr p {
+  @apply text-white;
 }/*# sourceMappingURL=ThemeContainer.module.css.map */
