--- a/my-bti/src/containers/themecontainer/ThemeContainer.module.scss
+++ b/my-bti/src/containers/themecontainer/ThemeContainer.module.scss
@@ -1,6 +1,6 @@
 .dark {
   @apply flex flex-col h-screen w-full z-10 bg-slate-800;
-  h2{
+  h2 {
     @apply text-white;
   }
   h4 {
@@ -18,24 +18,39 @@
 
     .card_content {
       @apply flex flex-col items-center justify-center gap-4 transform transition-transform duration-500 hover:scale-125;
-      h2{
-        @apply text-slate-900;
+      h2 {
+        @apply text-slate-800 font-semibold;
       }
     }
-}
-.text_content_book{
-  h1{
-    @apply text-white;
   }
-  ul{
-    @apply text-slate-100;
+  .text_content_book {
+    h1 {
+      @apply text-white;
+    }
+    ul {
+      @apply text-slate-100;
+    }
+  }
+  .main_container {
+    @apply rounded-3xl bg-slate-100 p-1;
+    width: inherit;
+    h3 {
+      @apply text-slate-800 font-semibold;
+    }
+  }
+  .side_contr {
+    @apply container bg-slate-100 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
+    p {
+      @apply text-slate-800 font-semibold;
+    }
   }
 }
-}
+
+// LIGHT
 
 .light {
   @apply flex flex-col h-screen w-full z-10 bg-white;
-  h2{
+  h2 {
     @apply text-black;
   }
   h4 {
@@ -53,19 +68,27 @@
 
     .card_content {
       @apply flex flex-col items-center justify-center gap-4 transform transition-transform duration-500 hover:scale-125;
-      h2{
-        @apply text-white;
+      h2 {
+        @apply text-white font-semibold;
       }
     }
-}
-.text_content_book{
-  h1{
-    @apply text-black;
   }
-  ul{
-    @apply text-slate-700;
+  .text_content_book {
+    h1 {
+      @apply text-black;
+    }
+    ul {
+      @apply text-slate-700;
+    }
+  }
+  .main_container {
+    @apply rounded-3xl bg-slate-700 p-1;
+    width: inherit;
+  }
+  .side_contr {
+    @apply container bg-slate-700 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
+    p {
+      @apply text-white;
+    }
   }
 }
-}
-
-
