--- a/my-bti/src/components/calculator/CalculatorTP.module.css
+++ b/my-bti/src/components/calculator/CalculatorTP.module.css
@@ -10,7 +10,11 @@
   @apply font-semibold;
 }
 
-.h1 {
+.light_h1 {
+  @apply text-sm md:text-lg text-slate-800 font-medium mt-2 md:mt-4;
+}
+
+.dark_h1 {
   @apply text-sm md:text-lg text-white font-medium mt-2 md:mt-4;
 }
 
