--- a/my-bti/src/components/carousel/Carousel.module.scss
+++ b/my-bti/src/components/carousel/Carousel.module.scss
@@ -1,4 +1,15 @@
-.carousel{
+.contentbox {
+    @apply flex flex-col items-center max-w-lg md:max-w-2xl m-auto;
+    p {
+        @apply text-slate-500 text-sm md:text-xl text-center pb-5;
+    }
+}
+
+.hero_text {
+    @apply pt-16 pb-5 text-white uppercase text-center font-semibold;
+}
+
+.carousel {
     width: 100%;
     margin: 0 auto;
     padding: 0 30px;
