--- a/my-bti/src/components/input/Input.module.css
+++ b/my-bti/src/components/input/Input.module.css
@@ -1,9 +1,9 @@
 .dark_text_input {
-  @apply bg-slate-800 p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 placeholder:bg-slate-800 focus:outline-none focus:border-green-400 cursor-pointer text-gray-300;
+  @apply bg-slate-800 p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 placeholder:bg-slate-800 focus:outline-none focus:border-green-400 cursor-pointer text-gray-300 rounded-none;
 }
 
 .light_text_input {
-  @apply p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 cursor-pointer;
+  @apply p-2 md:p-4 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 cursor-pointer rounded-none;
 }
 
 .label {
