--- a/my-bti/src/components/forms/contactForm/contactForm.module.css
+++ b/my-bti/src/components/forms/contactForm/contactForm.module.css
@@ -14,11 +14,11 @@
 }
 
 .light_textarea {
-  @apply p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none;
+  @apply p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none rounded-none;
 }
 
 .dark_textarea {
-  @apply bg-slate-800 p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none text-gray-300;
+  @apply bg-slate-800 p-3 md:p-4 h-32 md:h-40 w-full md:w-80 border-b border-b-gray-400 placeholder:text-gray-300 focus:outline-none focus:border-green-400 resize-none text-gray-300 rounded-none;
 }
 
 .submit_btn {
