changed lang in html tag

--- a/my-bti/src/ui/herosection/Herosection.module.css
+++ b/my-bti/src/ui/herosection/Herosection.module.css
@@ -10,15 +10,15 @@
   margin: 0 auto;
   @apply flex flex-col items-center justify-center gap-5 mb-8 md:mb-14;
 }
-.text_container h4 {
-  @apply font-bold leading-8 text-center;
+.text_container h1 {
+  @apply font-bold leading-8 text-center text-2xl;
 }
 .text_container .list_text {
   @apply text-slate-500 text-sm md:text-xl font-medium;
 }
 
 @media (min-width: 768px) {
-  .text_container h4 {
+  .text_container h1 {
     text-align: unset;
   }
 }/*# sourceMappingURL=Herosection.module.css.map */
