--- a/my-bti/src/containers/cardslist/CardList.module.scss
+++ b/my-bti/src/containers/cardslist/CardList.module.scss
@@ -2,8 +2,9 @@
     position: relative;
     z-index: 1;
     padding: 10vh 0;
+    .h4 {
+        @apply text-center my-5 md:my-10 font-bold text-xl md:text-2xl;
+    }
 }
 
-.h4 {
-    @apply text-center my-5 md:my-10 font-bold text-gray-900;
-}
+
