--- a/my-bti/src/ui/contacts/contacts.module.scss
+++ b/my-bti/src/ui/contacts/contacts.module.scss
@@ -1,5 +1,5 @@
-.h4_hero {
-    @apply text-center my-5 md:my-10 font-bold text-gray-900;
+.h1_hero {
+    @apply text-center my-5 md:my-10 font-bold;
 }
 
 .container_box {
@@ -39,9 +39,6 @@
     justify-content: space-between;
 }
 
-// .side_contr {
-//     @apply container bg-slate-700 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
-// }
 
 .flex_container {
     @apply flex items-start md:items-baseline justify-between flex-col md:flex-row gap-5 mb-2 md:mb-5;
