--- a/my-bti/src/containers/themecontainer/ThemeContainer.module.scss
+++ b/my-bti/src/containers/themecontainer/ThemeContainer.module.scss
@@ -46,6 +46,9 @@
     p {
       @apply text-slate-800 font-semibold;
     }
+    a{
+      @apply text-slate-800 font-semibold;
+    }
   }
 }
 
@@ -94,6 +97,9 @@
   .side_contr {
     @apply container bg-slate-700 w-full rounded-md p-5 md:p-10 md:h-96 relative flex flex-col items-center;
     p {
+      @apply text-white;
+    }
+    a{
       @apply text-white;
     }
   }
